<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JadwalDokterActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="JADWAL DOKTER"
        android:textSize="30dp"
        android:textStyle="bold"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="60dp">
        <TableRow
            android:background="@color/colorGreen">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/col1"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/col2"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/col3"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/col4"
                android:textColor="@color/white"
                android:padding="10sp"
                android:textSize="20sp"
                android:layout_weight="4"
                android:gravity="center"/>


        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row1Nama"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="15sp"
                android:layout_weight="4"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row1Poli"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row1Hari"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row1Jam"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row2Nama"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="15sp"
                android:layout_weight="4"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row2Poli"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row2Hari"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row2Jam"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row3Nama"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="15sp"
                android:layout_weight="4"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row3Poli"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row3Hari"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row3Jam"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row4Nama"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="15sp"
                android:layout_weight="4"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row4Poli"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row4Hari"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row4Jam"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row5Nama"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="15sp"
                android:layout_weight="4"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row5Poli"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row5Hari"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row5Jam"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </TableRow>

        <TableRow>
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/row6Nama"
                android:textColor="@color/black"
                android:padding="10sp"
                android:textSize="15sp"
                android:layout_weight="4"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row6Poli"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row6Hari"
                android:textColor="@color/black"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:padding="10sp"
                android:text="@string/row6Jam"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </TableRow>
    </TableLayout>


</RelativeLayout>